// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Asset Hub PSM > Circuit breaker and privilege > MintingDisabled — mint stopped, redeem allowed > minting disabled: AssetStatusUpdated event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "status": "MintingDisabled",
    },
    "method": "AssetStatusUpdated",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Debt ceilings > setMaxDebt below outstanding debt — minting paused, redeems work > lower ceiling: MaxDebtUpdated event 1`] = `
[
  {
    "data": {
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newValue": 100000000,
      "oldValue": 10000000000,
    },
    "method": "MaxDebtUpdated",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Debt ceilings > zero ceiling weight — external closed, remainder reweighted > zero weight: AssetCeilingWeightUpdated event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 1300)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newValue": "0.00%",
      "oldValue": "50.00%",
    },
    "method": "AssetCeilingWeightUpdated",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Decimal scaling > higher-decimal external — debt scaled down, redemption scaled up > high decimal mint: Minted event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": 1,
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x6b175474e89094c44da98b954eedeac495271d0f",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "externalConsumed": 20000000000000000000,
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalFee": 100000,
      "internalReceived": "(rounded 20000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > External asset management > addExternalAsset — decimals snapshotted, external counted > add external: ExternalAssetAdded event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "ExternalAssetAdded",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Instance lifecycle > create PSM as internal asset owner — instance recorded, deposit held > create PSM: PsmCreated event 1`] = `
[
  {
    "data": {
      "emergencyAdmin": {
        "system": {
          "Signed": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
        },
      },
      "feeDestination": "15Y1VYcCkzD91e5hzAW36wynBfh3inNzzwmUYF9gtm6NZwzi",
      "fullAdmin": {
        "system": {
          "Signed": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
        },
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "maxDebt": 10000000000,
    },
    "method": "PsmCreated",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Instance lifecycle > create PSM with zero minimum swap — ZeroMinSwapAmount > zero min swap: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 700000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Instance lifecycle > remove PSM with approved externals — blocked, then succeeds once withdrawn > remove PSM: PsmRemoved event 1`] = `
[
  {
    "data": {
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "PsmRemoved",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Swaps > mint — collateral to reserve, internal to caller, fee to destination > mint: Minted event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "externalConsumed": 1000000000,
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalFee": 5000000,
      "internalReceived": "(rounded 1000000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Swaps > redeem — reserve released, debt reduced by burned amount > redeem: Redeemed event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "externalReceived": "(rounded 500000000)",
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalConsumed": 500000000,
      "internalFee": 2500000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Redeemed",
    "section": "psm",
  },
]
`;
